实现c源码调用Java函数接口，使用注释功能简化节点调用接口的逻辑

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 rootProject.name = "SdtTr369"
 include ':app'
 include ':tr369'
+include ':accessor'
+include ':annotation'
