--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,8 +120,9 @@ android {
 }
 
 dependencies {
-    compileOnly files('libs/framework.jar')
+    compileOnly files('../accessor/libs/framework.jar')
 
-    implementation project(':tr369')
+    implementation project(path: ':tr369')
+    implementation project(path: ':accessor')
     implementation 'androidx.leanback:leanback:1.0.0'
 }
