--- a/tr369/build.gradle
+++ b/tr369/build.gradle
@@ -49,7 +49,7 @@ android {
 }
 
 dependencies {
-//    implementation "com.skyworthdigital.common:log:1.0.19"
+    implementation project(path: ':accessor')
 //    implementation 'androidx.appcompat:appcompat:1.2.0'
 //    implementation 'com.google.android.material:material:1.2.1'
 //    testImplementation 'junit:junit:4.+'
