1. 支持后台输入命令（dbget/dbset）获取节点的值；2. 配置开机启动时上报的节点。

--- a/accessor/build.gradle
+++ b/accessor/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     annotationProcessor project(':annotation')
     implementation project(path: ':annotation')
+    implementation project(path: ':tr369')
 
 //    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 //    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
