--- a/tr369/build.gradle
+++ b/tr369/build.gradle
@@ -49,8 +49,7 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':accessor')
-//    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 //    implementation 'com.google.android.material:material:1.2.1'
 //    testImplementation 'junit:junit:4.+'
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
