--- a/accessor/build.gradle
+++ b/accessor/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'io.socket:socket.io-client:1.0.0'
+    implementation 'com.google.guava:guava:30.1-jre'
 
 //    implementation "com.skyworthdigital.common:log:1.0.19"
 
