--- a/accessor/src/main/AndroidManifest.xml
+++ b/accessor/src/main/AndroidManifest.xml
@@ -36,4 +36,19 @@
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <uses-permission android:name="android.permission.SUSPEND_APPS" />
 
+    <application>
+        <activity
+            android:name="com.sdt.diagnose.common.ScreenRecordActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
+
+        <service
+            android:name="com.sdt.diagnose.common.ScreenRecordService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="mediaProjection" />
+
+        <activity android:name="com.sdt.diagnose.Device.X_Skyworth.LockUnlockActivity"
+            android:theme="@style/Theme.Design.NoActionBar"/>
+    </application>
+
 </manifest>
