新增Launcher短消息功能，修改Management.Url的获取方式，优化APP下载/安装结果的获取和上报，优化代码格式

--- a/accessor/build.gradle
+++ b/accessor/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'io.socket:socket.io-client:1.0.0'
     implementation 'com.google.guava:guava:30.1-jre'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 //    implementation "com.skyworthdigital.common:log:1.0.19"
 
