--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-<!--                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />-->
+                <!-- <category android:name="android.intent.category.LEANBACK_LAUNCHER" />-->
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -29,10 +29,10 @@
         <service
             android:name=".SdtTr369Service"
             android:enabled="true"
-            android:exported="false">
-        </service>
+            android:exported="false" />
 
-        <receiver android:name=".Receiver.BootCompletedReceiver"
+        <receiver
+            android:name=".Receiver.BootCompletedReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter android:priority="20000">
@@ -40,7 +40,9 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".Receiver.PackageReceiver" android:exported="true">
+        <receiver
+            android:name=".Receiver.PackageReceiver"
+            android:exported="true">
             <intent-filter android:priority="20000">
                 <!-- 一个新应用包已经安装在设备上，数据包括包名（监听所在的app，新安装时，不能接收到这个广播） -->
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
@@ -52,7 +54,9 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".Receiver.BluetoothMonitorReceiver" android:exported="true">
+        <receiver
+            android:name=".Receiver.BluetoothMonitorReceiver"
+            android:exported="true">
             <intent-filter android:priority="20000">
                 <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
                 <action android:name="android.bluetooth.device.action.ACL_CONNECTED" />
@@ -61,7 +65,9 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".Receiver.StandbyModeReceiver" android:exported="true">
+        <receiver
+            android:name=".Receiver.StandbyModeReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SCREEN_OFF" />
                 <action android:name="android.intent.action.SCREEN_ON" />
