新增远程屏幕授权功能

--- a/accessor/src/main/AndroidManifest.xml
+++ b/accessor/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
         <activity
             android:name="com.sdt.diagnose.command.ShortMessageActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <activity
+            android:name="com.sdt.diagnose.Device.X_Skyworth.BoxAllowActivity"
+            android:theme="@style/Theme.Transparent" />
     </application>
 
 </manifest>
