支持协议初始化前先通过HTTPS获取MQTT Server地址和证书的新功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,5 +126,6 @@ dependencies {
     implementation project(path: ':accessor')
     implementation 'androidx.leanback:leanback:1.0.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
