--- a/accessor/build.gradle
+++ b/accessor/build.gradle
@@ -13,7 +13,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags ""
+                abiFilters "armeabi-v7a"
             }
         }
     }
