优化代码混淆功能以支持Release版本的编译

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,7 @@ android {
             signingConfig release.signingConfig
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
