--- a/accessor/build.gradle
+++ b/accessor/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     implementation 'com.google.guava:guava:30.1-jre'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.orhanobut:logger:2.2.0'
+    implementation 'io.ipinfo:ipinfo-api:3.0.0'
 
 }
